# tesollo_manus_teleop

./: CMakeLists.txt  README.md  frames_2026-03-07_16.05.18.gv  package.xml
config/: fr5.yml  tesollo_params.yaml
include/teleop_slave/: dg5f_operator_TCP.hpp  fairino_lowlevel_controller_node.hpp  fairino_slave_node.hpp  master_bridge_node.hpp  tesollo_slave_node.hpp
launch/: teleop_rviz.launch.py
scripts/: curobo_mppi_solver.py
src/: fairino_lowlevel_controller_node.cpp  fairino_slave_node.cpp  fairino_state_printer_node.cpp  master_bridge_node.cpp  tesollo_slave_node.cpp
